--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,11 +4,11 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
+  padding-top: 2rem;
   align-items: center;
 }
 
@@ -106,6 +106,18 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.mainNav ul {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.mainNav ul li {
+  margin: 0 24px;
+  list-style: none;
+  font-weight: bold;
 }
 
 @media (max-width: 600px) {
